--- a/docService/src/main/resources/application.properties
+++ b/docService/src/main/resources/application.properties
@@ -1,8 +1,8 @@
-server.port=8081
+server.port=8082
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/micro_services_poc
 spring.datasource.username=root
 spring.datasource.password=root
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 #spring.jpa.show-sql: true
