--- a/UserService/src/main/resources/application.properties
+++ b/UserService/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 server.port=8082
+#spring.application.name=user
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/micro_services_poc
 spring.datasource.username=root
