--- a/adminService/src/main/resources/application.properties
+++ b/adminService/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-server.port=8082
+server.port=8085
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/micro_services_poc
 spring.datasource.username=root
@@ -6,3 +6,6 @@ spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 #spring.jpa.show-sql: true
+#logging.level.root=warn
+#logging.level.org.springframework.web=debug
+#logging.level.org.hibernate=error
