--- a/docService/src/main/resources/application.yml
+++ b/docService/src/main/resources/application.yml
@@ -1,2 +1,17 @@
 server:
   port: 8082
+
+spring:
+  jpa:
+    hibernate:
+      ddl-auto: update
+  datasource:
+    url: jdbc:mysql://localhost:3306/demo
+    username: root
+    password: Dnyanesh@123
+  properties:
+    hibernate:
+      format_sql: true
+
+logging.level.org.springframework.web: trace
+logging.level.org.apache: trace
