--- a/adminService/src/main/resources/application.yml
+++ b/adminService/src/main/resources/application.yml
@@ -1,2 +1,15 @@
 server:
   port: 8080
+
+
+spring:
+  jpa:
+    hibernate:
+      ddl-auto: update
+  datasource:
+    url: jdbc:mysql://localhost:3306/demo
+    username: root
+    password: Dnyanesh@123
+  properties:
+    hibernate:
+      format_sql: true
